move tests to a separate project, supertypes method, overload staticCast, readability